# EDMT

./: .buildinfo  .buildinfo.bak  .gitignore  01_introduction.html  02_mapping.html  03_airdata.html  04_edmt.html  =3.10  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  changelog.html  genindex.html  index.html  install_edmt.py  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  test.ipynb
.doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/edmt/: index.doctree
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: python-package.yml  test.yml
_modules/: index.html
_modules/edmt/contrib/: utils.html
_modules/edmt/conversion/: conversion.html
_modules/edmt/mapping/: mapping.html  maps.html
_modules/edmt/models/: airtable.html  drones.html
_sources/: 01_introduction.rst.txt  02_mapping.rst.txt  03_airdata.rst.txt  04_edmt.rst.txt  index.rst.txt
_sources/api/: edmt.contrib.rst.txt  edmt.conversion.rst.txt  edmt.mapping.rst.txt  edmt.models.rst.txt  init.rst.txt  modules.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/edmt/: index.rst.txt
_static/: documentation_options.js
api/: contrib.html  conversion.html  edmt.contrib.html  edmt.conversion.html  edmt.mapping.html  edmt.models.html  init.html  mapping.html  models.html  modules.html
autoapi/: index.html
autoapi/edmt/: index.html
autoapi/edmt/_edmt/: index.html
autoapi/edmt/analysis/: index.html
autoapi/edmt/base/: index.html
autoapi/edmt/contrib/: index.html
autoapi/edmt/conversion/: index.html
autoapi/edmt/mapping/: index.html
autoapi/edmt/models/: index.html
autoapi/edmt/plotting/: index.html
autoapi/edmt/workflow/: index.html
docs/: conf.py  index.rst  introduction.rst
docs/api/: edmt.mapping.rst  edmt.rst  modules.rst
docs/notebooks/: edmt-test.ipynb
docs/source/: changelog.rst  conf.py  index.rst  installation.rst
docs/source/api/: contrib.rst  conversion.rst  init.rst  mapping.rst  models.rst
docs__/: airdata.rst  index.rst
docs__/_build/: .buildinfo  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs__/_build/.doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
docs__/api/: edmt.conversion.rst  edmt.models.rst
edmt/: __init__.py  _edmt.py  init.py  load.py
edmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
edmt/analysis/: LST.py  LST_layer.py  NDVI.py  NDVI_layer.py  __init__.py  analysis.py  precipitation.py
edmt/base/: __init__.py  _edmt.py  base.py  sorters.py  version.py
edmt/contrib/: __init__.py  load.py  sorters.py  utils.py
edmt/conversion/: __init__.py  checks.py  conversion.py  sdf_gdf.py  test_conversion.py  time.py
edmt/mapping/: __init__.py  edmtmapping.py  map_test.py  mapping.py  maps.py  plot.py  test_plot.py
edmt/models/: __init__.py  airtable.py  drones.py  econiche.py  get_flight_routes.py  uploads.py
edmt/processing/: __init__.py
edmt/workflow/: __init__.py  builder.py  connector.py  workflow.py
tests/: mapping.ipynb  test_airSegment.py  test_airdata.py  test_analysis.py  test_conversion.py  test_conversion_.py  test_flight_routes.py  test_generate_uuid.py  test_models.py  test_sdf_to_gdf.py
tests/workflow/: __init__.py  builder.py  workflow.py
(+130 files in other folders)
