[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edmt"
version = "1.0.2dev"
description = "Environmental Data Management Toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"} 
authors = [
  {name = "Odero, Kuloba & musasia", email = "francisodero10@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "duckdb>=0.9,<1.3.2",

  "earthengine-api>=0.1.324,<1.8",
  "google-api-core>=1.34,<3.0",
  "google-auth>=1.25,<2.49",

  "geopandas>=0.12.2,<1.1.2",
  "fiona>=1.9.6,<1.10.1",
  "shapely>=1.8,<2.1.2",

  "tqdm>=4.64,<5",
  "requests>=2.28,<3"
]


[project.urls]
Homepage = "https://github.com/envdmt/EDMT/"

[project.scripts]
edmt = "edmt.cli:main"

[tool.setuptools.packages.find]
include = ["edmt*"]
