[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edmt"
version = "1.0.6.dev5"
description = "Environmental Data Management Toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"} 
authors = [
  {name = "Odero, Kuloba & musasia", email = "francisodero10@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",

    "Operating System :: OS Independent",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "License :: OSI Approved :: MIT License",
]

keywords = [
  "geospatial",
  "gis",
  "earth-engine",
  "remote-sensing",
  "conservation",
  "spatial-analysis",
  "geopandas"
]

dependencies = [
  "duckdb>=0.9,<1.3.2",
  "earthengine-api>=0.1.324,<1.8",
  "geopandas>=1",
  "pandas<3",
  "fiona>=1.9.6,<1.10.1",
  "tqdm>=4",
  "requests>=2.28,<3",
  "matplotlib>=3.9",
  "mapclassify>=2.7",
]


[project.urls]
Homepage = "https://github.com/envdmt/EDMT/"
Documentation = "https://envdmt.github.io/EDMT/"

[project.scripts]
edmt = "edmt.cli:main"

[tool.setuptools.packages.find]
include = ["edmt*"]
